refactor(util): 优化代码结构和性能
- 在 BlockPosList 中添加 @NonNull 注解以增强类型安全
- 在 INodeProvider 和 SelectionVisualFeedback 的 JavaDoc 中添加段落标记
- 修复 SelectionVisualFeedback 中的空指针异常风险
- 使用 getFirst() 和 getLast() 替代索引访问优化 SurfaceStripBridge 性能
- 将 TetrahedronBlockGenerator 中的顶点计算逻辑提取为独立方法
- 使用 Long.hashCode() 优化 Vec3 的